# 404

./: .vimrc  Minimum.cpp  Tabelle.cpp  Zahlenzerlegung.cpp  a.out  h.template  quadratwurzel.cpp
Praktikum2/: Zahlenzerlegung.cpp  Zinsberechnung.cpp  a.out  quadratwurzel.cpp
Praktikum3/: .Koordinaten3.cpp.swp  Koordinaten.cpp  Koordinaten2.cpp  Koordinaten3.cpp  Vertraege.cpp  a.out  carray.cpp  sort.cpp
Praktikum3/makefiles/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  func.cpp  func.h  hello  hello.cpp  meineklasse.cpp  meineklasse.h
Praktikum3/makefiles/headers/: func.cpp  meineklasse.h
Praktikum4/Funktionen_und_Aufzaehlungstypen/: Aufzaehlungstypen.cpp  a.out
Praktikum4/Point/: .main.cpp.swp  .point.cpp.swp  .point.h.swp  Makefile  main  main.cpp  point.cpp  point.h
Praktikum4/Studenten/: Makefile  main  main.cpp  student.cpp  student.h  zug.cpp  zug.h
Praktikum4/Template_Funktionen/: Makefile  Templates  Templates.cpp  a.out  functions.h  functions.tpp  myclass.cpp  myclass.h
templates/: cpp.template  maincpp.template
